[package]
name = "certutil"
version = "0.1.0"
edition = "2021"
authors = ["certutil contributors"]
description = "A complete internal PKI toolkit for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/certutil"
keywords = ["pki", "certificate", "tls", "x509", "ca"]
categories = ["cryptography", "network-programming"]

[[bin]]
name = "certutil"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.7"
webpki = { package = "rustls-webpki", version = "0.102", features = ["std"] }
x509-parser = "0.16"
thiserror = "1.0"
chrono = "0.4"
colored = "2.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
clap = { version = "4.5", optional = true, features = ["derive", "cargo"] }
p12 = "0.6"
yasna = "0.5"
der-parser = "9.0"
oid-registry = "0.7"

[features]
default = []
cli = ["dep:clap"]
json = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
