[package]
name = "cutil"
version = "0.1.0"
edition = "2024"
authors = ["Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>"]
description = "A complete internal PKI toolkit for Rust"
license = "MIT"
repository = "https://github.com/kunalsinghdadhwal/cutil"
documentation = "https://docs.rs/cutil"
homepage = "https://github.com/kunalsinghdadhwal/cutil"
keywords = ["pki", "certificate", "tls", "x509", "ca"]
categories = ["cryptography", "network-programming"]

[[bin]]
name = "cutil"
path = "bin/cli.rs"

[dependencies]
rcgen = { version = "0.12", features = ["x509-parser"] }
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki = "0.22"
x509-parser = "0.16"
thiserror = "1.0"
chrono = "0.4"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.5", features = ["derive", "cargo"] }
p12 = "0.6"
yasna = "0.5"
der-parser = "9.0"
oid-registry = "0.7"
time = { version = "0.3", features = ["std"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
